[css-tables] Set ancestor widths dirty when row border width changes

Otherwise shrink-to-fit containers use their old width.

BUG=613728
TEST=fast/table/change-row-border-width-floating-container.html
R=eae@chromium.org

Review-Url: https://codereview.chromium.org/2023583002
Cr-Commit-Position: refs/heads/master@{#396621}

Former-commit-id: c16f4fdb4a9d04ba6bfdfeecf25d84653d7e4178